--- a/TwinTechsForms/TwinTechsFormsExample/TwinTechs/Example/GridView/Cells/GridViewXamlCell.xaml
+++ b/TwinTechsForms/TwinTechsFormsExample/TwinTechs/Example/GridView/Cells/GridViewXamlCell.xaml
@@ -4,7 +4,7 @@
 	xmlns="http://xamarin.com/schemas/2014/forms"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	x:Class="TwinTechs.Example.GridView.Cells.GridViewXamlCell"
-	xmlns:xlabs="clr-namespace:XLabs.Forms.Controls;assembly=TwinTechsForms"
+	xmlns:xlabs="clr-namespace:TwinTechs.Forms.Controls;assembly=TwinTechsForms"
 	xmlns:controls="clr-namespace:TwinTechs.Controls;assembly=TwinTechsForms">
 
 		<StackLayout Spacing="0">
