--- a/TwinTechsForms/TwinTechsFormsExample/TwinTechs/Example/GridView/GridViewPerformance2.xaml
+++ b/TwinTechsForms/TwinTechsFormsExample/TwinTechs/Example/GridView/GridViewPerformance2.xaml
@@ -3,7 +3,7 @@
 <ContentPage
 	xmlns="http://xamarin.com/schemas/2014/forms"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-	xmlns:xlabs="clr-namespace:XLabs.Forms.Controls;assembly=TwinTechsForms"
+	xmlns:xlabs="clr-namespace:TwinTechs.Forms.Controls;assembly=TwinTechsForms"
 	xmlns:cells="clr-namespace:TwinTechs.Example.GridView.Cells;assembly=TwinTechsFormsExample"
 	x:Class="TwinTechs.Example.GridView.GridViewPerformance2">
 
